# cli-stackexchange-analyzer

./: .env.example  .gitignore  Cargo.toml  README.md  data_exported.csv
src/: api.rs  core.rs  dtos.rs  main.rs  metrics.rs  primitives.rs  utils.rs
src/analyzer/: core.rs  mod.rs  primitives.rs
src/api/: dtos.rs  mod.rs  stackexchange_api.rs
src/utils/: charts.rs  dates.rs  exporter.rs  mod.rs  parser.rs  printer.rs  tags_handler.rs  utils.rs
