[package]
name = "cli-stackexchange-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] } # cli
chrono = { version = "0.4", features = ["unstable-locales"] } # manage date convertions
reqwest = { version = "0.11", features = ["gzip", "json"] } # API requests with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
dotenv = "0.15.0"
